# TarsPythonServer

./: .gitignore  LICENSE  README.md  README.zh.md
DemoApp/DemoPythonServer/src/: CMakeLists.txt  DemoPythonServer.cpp  DemoPythonServer.h  RunPandas.h  RunPandas.tars  RunPandasImp.cpp  RunPandasImp.h
PythonScript/: demo.py
PythonScript/demo_func/: group_by.py
PythonScript/schemas/: example_schema.py  schema_errors.py
PythonScript/tests/integration/: test_example.py
PythonScript/utils/: schema_validator.py
docker/: Dockerfile
